# str-utils-static

./: .gitignore  CMakeLists.txt  CMakePresets.json  DoxyPress.json  LICENSE.txt  README.md  vcpkg.json
cmake/: str_utilsConfig.cmake
doc/html/: dir_d41d8cd98f00b204e9800998ecf8427e.html  index.html  md_README.html  navtreedata.js  pages.html
docs/html/: dir_d44c64559bbebec7f509842c48db8b23.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacestr__utils.html  navtreeindex0.js  str-utils-static_8hpp_source.html
lib/debug/: str-utils-static.lib
lib/release/: str-utils-static.lib
src/: CMakeLists.txt  str-utils-static.cpp
src/include/: str-utils-static.hpp
src/str-utils-static/: CMakeLists.txt  str-utils-static.cpp
tests/: str-utils-static-tests.cpp
